--- a/轻羽音乐/my-music/index.html
+++ b/轻羽音乐/my-music/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>QQ音乐</title>
+    <title>轻羽音乐</title>
   </head>
   <body>
     <div id="app"></div>
