--- a/tongchuang/pro_details.html
+++ b/tongchuang/pro_details.html
@@ -3,7 +3,7 @@
 	<head>
 	<title>产品展示</title>
 	<link rel="stylesheet" href="css/pubilic.css">
-	<link rel="stylesheet" href="css/product_details.css">
+	<link rel="stylesheet" href="css/pro_details.css">
 	<script src="js/jquery-1.8.3.min.js"></script>
 	<script src="js/js.js"></script>
 	</head>
@@ -49,12 +49,14 @@
 		<div class="product">
 			<h2>产品中心</h2>
 			<div class="content">
-				<ul>
-					<li class=" timber"><a href="product.html"><i></i><span>木门</span></a></li>
-					<li class="cabinet"><a href="product.html"><i></i><span>橱柜</span></a></li>
-					<li class="wardrobe"><a href="product.html"><i></i><span>衣柜</span></a></li>
-					<li class="chairs"><a href="product.html"><i></i><span>桌椅</span></a></li>
-				</ul>
+				<div id="menu">
+					<ul>
+							<li><i href="javascript:"></i><a href="javascript:">木门</a></li>
+							<li class="on"><i href="javascript:"></i><a href="javascript:" class="on">橱柜</a></li>
+							<li><i href="javascript:"></i><a href="javascript:">衣柜</a></li>
+							<li><i href="javascript:"></i><a href="javascript:">桌椅</a></li>
+					</ul>
+				</div>
 					<img src="images/product_details1.jpg">
 				<div class="text">
 					<h3>橱柜参数</h3>
