--- a/tongchuang/product.html
+++ b/tongchuang/product.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="css/product.css">
 	<script src="js/jquery-1.8.3.min.js"></script>
 	<script src="js/js.js"></script>
-	<script src="js/product.js"></script>
+	<script src="js/pro_details.js"></script>
 	</head>
 	<body>
 	<!--头部开始-->
@@ -51,13 +51,16 @@
 			<h2>产品中心</h2>
 			<div class="bg">
 			<div class="con">
-			<div id="title">
-					<h6 class="timber"><i href="javascript:"></i><a href="javascript:">木门</a></h6>
-					<h6 class="active"><i href="javascript:"></i><a href="javascript:" class="on">橱柜</a></h6>
-					<h6 class="wardrobe"><i href="javascript:"></i><a href="javascript:">衣柜</a></h6>
-					<h6 class="chairs"><i href="javascript:"></i><a href="javascript:">桌椅</a></h6>
+			<div id="menu">
+				<ul>
+						<li><i href="javascript:"></i><a href="javascript:">木门</a></li>
+						<li class="on"><i href="javascript:"></i><a href="javascript:" class="on">橱柜</a></li>
+						<li><i href="javascript:"></i><a href="javascript:">衣柜</a></li>
+						<li><i href="javascript:"></i><a href="javascript:">桌椅</a></li>
+				</ul>
 			</div>
-				<ul id="sark">
+			<div id="pic">
+				<ul>
 					<li><a href="pro_details.html"><img src="images/Product1.jpg"></a></li>
 					<li><a href="pro_details.html"><img src="images/Product2.jpg"></a></li>
 					<li><a href="pro_details.html"><img src="images/Product3.jpg"></a></li>
@@ -65,7 +68,7 @@
 					<li><a href="pro_details.html"><img src="images/Product5.jpg"></a></li>
 					<li><a href="pro_details.html"><img src="images/Product6.jpg"></a></li>
 				</ul>
-				<ul id="cabinet">
+				<ul class="on">
 					<li><a href="pro_details.html"><img src="images/Product5.jpg"></a></li>
 					<li><a href="pro_details.html"><img src="images/Product3.jpg"></a></li>
 					<li><a href="pro_details.html"><img src="images/Product1.jpg"></a></li>
@@ -73,7 +76,7 @@
 					<li><a href="pro_details.html"><img src="images/Product4.jpg"></a></li>
 					<li><a href="pro_details.html"><img src="images/Product6.jpg"></a></li>
 				</ul>
-				<ul id="goods">
+				<ul>
 					<li><a href="pro_details.html"><img src="images/Product6.jpg"></a></li>
 					<li><a href="pro_details.html"><img src="images/Product3.jpg"></a></li>
 					<li><a href="pro_details.html"><img src="images/Product2.jpg"></a></li>
@@ -81,7 +84,7 @@
 					<li><a href="pro_details.html"><img src="images/Product4.jpg"></a></li>
 					<li><a href="pro_details.html"><img src="images/Product1.jpg"></a></li>
 				</ul>
-				<ul  id="wood">
+				<ul>
 					<li><a href="pro_details.html"><img src="images/Product5.jpg"></a></li>
 					<li><a href="pro_details.html"><img src="images/Product6.jpg"></a></li>
 					<li><a href="pro_details.html"><img src="images/Product4.jpg"></a></li>
@@ -89,6 +92,7 @@
 					<li><a href="pro_details.html"><img src="images/Product1.jpg"></a></li>
 					<li><a href="pro_details.html"><img src="images/Product3.jpg"></a></li>
 				</ul>
+					</div>
 				</div>
 			</div>
 		</div>
